--- a/WebWizards/site.html
+++ b/WebWizards/site.html
@@ -29,7 +29,7 @@
                 <li><a class="dropdown-item" href="mailto:mustafa.muhammedi1396@gmai.com" target="_blank">E-posta</a></li>
                 <li><a class="dropdown-item" href="https://github.com/M-Muhammedi" target="_blank">GitHub</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="https://call.whatsapp.com/voice/m2iA1wrBOMlWm6xqVSvMF0" target="_blank">whatsapptan Ara</a></li>
+                <li><a class="dropdown-item" href="#" target="_blank">whatsapptan Ara</a></li>
               </ul>
             </li>
           </ul>
@@ -108,7 +108,7 @@
           İletişim Bilgiler
         </div>
   <ul class="list-group list-group-flush ">
-    <li class="list-group-item text-bg-dark">Telefon : 0553 893 8389</li>
+    <li class="list-group-item text-bg-dark">Telefon : 0500 000 0000</li>
     <li class="list-group-item text-bg-dark">Inistagram : mustafa_2000-1</li>
     <li class="list-group-item text-bg-dark">GitHub : M-Muhammedi</li>
     <li class="list-group-item text-bg-dark">E-posta : mustafa.muhammedi1396@gmail.com</li>
