--- a/MTTB/mttb.html
+++ b/MTTB/mttb.html
@@ -154,11 +154,11 @@
         <ul class="list-group list-group-flush">
           <li class="list-group-item text-bg-dark">Telefon : +90 552 005 50 02</li>
           <li class="list-group-item text-bg-dark">
-            Inistagram : <a style="text-decoration: none;" href="https://www.instagram.com/mttbkayseri/?igshid=wxxysz5e70bx">
+            Inistagram : <a style="text-decoration: none;" target="_blank" href="https://www.instagram.com/mttbkayseri/?igshid=wxxysz5e70bx">
              mttbkayseri</a>
           </li>
           <li class="list-group-item text-bg-dark">
-            Youtube : <a style="text-decoration: none;" href="https://www.youtube.com/channel/UCGHO4a1nstGXsJ3lw6-fyRw">
+            Youtube : <a style="text-decoration: none;" target="_blank" href="https://www.youtube.com/channel/UCGHO4a1nstGXsJ3lw6-fyRw">
               MTTB KAYSERİ</a>
           </li>
           <li class="list-group-item text-bg-dark">
